# biro

./: README.md  biro  pyproject.toml
examples/: bubble.biro
install/: install.sh
src/: biro.py
src/biro/: __init__.py  cpp_transpiler.py  grammar  lexerparser.py  loader.py  middleware.py  parser.out  parsetab.py  preprocessor.py
src/biropkg/: __init__.py  db.py  github.py
src/implementations/cpp/: builtin_ask.cpp  builtin_index.cpp  builtin_len.cpp  builtin_say.cpp
